src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Local_Time_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Local Time Setting</label>
        <referenceTo>Account_Local_Time_Setting__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Hours__c</fullName>
        <formula>TEXT(IF(Account_Local_Time_Setting__r.Use_12_Hour_Format__c, Hours_12_format__c, Hour__c + Offset__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Minutes__c</fullName>
        <formula>IF(GMT_Minutes__c &lt; 10, &quot;0&quot; &amp; TEXT(GMT_Minutes__c), TEXT(GMT_Minutes__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clock_Format__c</fullName>
        <formula>IF(NOT(ISBLANK(Account_Local_Time_Setting__c)) &amp;&amp; NOT(Account_Local_Time_Setting__r.Use_12_Hour_Format__c), &quot;&quot;, IF(Hour__c + Offset__c &lt; 12, &quot;AM&quot;, &quot;PM&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clock Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Icon__c</fullName>
        <formula>IF(Account_Local_Time_Setting__r.Use_Geolocation__c, IMAGE(&quot;https://www.countryflags.io/&quot; &amp; Country_Code__c &amp; &quot;/flat/16.png&quot;, Country_Code__c, 16, 16), IMAGE(&quot;/resource/1581936179000/localTimeJF__us_flag&quot;, &quot;US&quot;, 13, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(Account_Local_Time_Setting__r.Use_Geolocation__c, Country_Code__c, BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMT_Minutes__c</fullName>
        <formula>MINUTE(TIMEVALUE(NOW()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMT Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Offset__c</fullName>
        <label>GMT Offset</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <formula>HOUR(TIMENOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_12_format__c</fullName>
        <formula>IF ((Hour__c + Offset__c) &gt; 12, (Hour__c + Offset__c) - 12, Hour__c + Offset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours 12 format</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Time__c</fullName>
        <formula>IF(ISBLANK(Name) || (NOT(Account_Local_Time_Setting__r.Use_Geolocation__c) &amp;&amp; NOT(CONTAINS(&quot;US:United States&quot;, BillingCountry))), 
&quot;Unable to define time&quot;,
Country_Icon__c &amp; &quot; &quot; &amp; IF(BillingState = &quot;&quot;, BillingCity, BillingState) &amp; &quot;, &quot; &amp; Country__c &amp; &quot; - &quot; &amp; Time__c &amp; &quot; &quot; &amp; Clock_Format__c &amp; IF(Account_Local_Time_Setting__r.Use_Geolocation__c, &quot; (&quot; &amp; Time_zone_display_name__c &amp; &quot;)&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <formula>IF(Account_Local_Time_Setting__r.Use_Geolocation__c, GMT_Offset__c, USA_Offset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>Billing_Hours__c &amp; &quot;:&quot; &amp; Billing_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_zone_display_name__c</fullName>
        <label>Time zone display name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Offset__c</fullName>
        <formula>IF(CONTAINS($Label.States_In_GMT_Minus_8, BillingState), -8,
  IF(CONTAINS($Label.States_In_GMT_Minus_7, BillingState), -7,
    IF(CONTAINS($Label.States_In_GMT_Minus_6, BillingState), -6, 0
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USA_Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Geo_Location</fullName>
        <active>true</active>
        <label>Geo Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>